--- a/config/config.json
+++ b/config/config.json
@@ -221,9 +221,7 @@
             "bidag_order_mcmc": [
                 {
                     "id": "omcmc_itsample-bge",
-                    "startspace_algorithm": [
-                        "itsample-bge_am01_endspace"
-                    ],
+                    "startspace_algorithm": "itsample-bge_am01_endspace",
                     "plus1": true,
                     "scoretype": "bge",
                     "chi": null,
@@ -238,11 +236,7 @@
                     "cpdag": false,
                     "timeout": null,
                     "mcmc_seed": 1,
-                    "threshold": [
-                        0.2,
-                        0.5,
-                        0.7
-                    ],
+                    "threshold": 0.5,
                     "burnin": 0
                 }
             ]
