--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -27,7 +27,7 @@ if ecode == 0 and apptainer_ecode != 0:
     v1 = outp.split()[2].split(".")[0]
     v2 = outp.split()[2].split(".")[1]
     smkver = float(v1 + "." + v2)
-    if smkver < 3.2:
+    if float(v1) < 3 or (float(v1)==3 and float(v2) < 2):
         raise Exception("You have " +outp+ ". Benchpress requires Singularity >= 3.2.")
 
 # This is a workaround. Needed a variable for the configfilename
@@ -44,7 +44,6 @@ for arg in args:
 configfile: 
     configfilename
 
-# Validate JSON syntax
 snakemake.utils.validate(config, 'schemas/config.schema.json')
 
 include: "rules/docker_images.smk"
