--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -74,8 +74,8 @@ for p in Path("workflow/rules/structure_learning_algorithms/").glob("*"):
 
  
     if (p / "rule.smk").is_file():
-
-        include: Path("rules/structure_learning_algorithms/", p.name, "rule.smk")
+        if p.name in pattern_strings:
+            include: Path("rules/structure_learning_algorithms/", p.name, "rule.smk")
 
 
 # Include the evaluation modules
