--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -48,14 +48,16 @@ include: "rules/filename_patterns.py"
 # Include the graph modules
 for p in Path("workflow/rules/graph/").glob("*"):
     if (p / "rule.smk").is_file():
-        include: Path("rules/graph/", p.name, "rule.smk")
+        if p.name in pattern_strings:
+            include: Path("rules/graph/", p.name, "rule.smk")
+
 
 
 # Include the parameters modules
 for p in Path("workflow/rules/parameters/").glob("*"):
     if (p / "rule.smk").is_file():
-
-        include: Path("rules/parameters/", p.name, "rule.smk")
+        if p.name in pattern_strings:
+            include: Path("rules/parameters/", p.name, "rule.smk")
 
 
 # Include the data modules
@@ -72,19 +74,18 @@ for p in Path("workflow/rules/structure_learning_algorithms/").glob("*"):
         #print(Path("rules/structure_learning_algorithms/", p.name, "rules.smk"))
         #include: Path("rules/structure_learning_algorithms/", p.name, "rules.smk")
 
- 
     if (p / "rule.smk").is_file():
         if p.name in pattern_strings:
             include: Path("rules/structure_learning_algorithms/", p.name, "rule.smk")
 
 
 # Include the evaluation modules
-for p in Path("workflow/rules/evaluation/").glob("*"):
-    if (p / "rules.smk").is_file():
 
+for p in Path("workflow/rules/evaluation/").glob("*"):
+
+        
+    if (p / "rules.smk").is_file():            
         include: Path("rules/evaluation/", p.name, "rules.smk")
 
-
     elif (p / "rule.smk").is_file():
-
         include: Path("rules/evaluation/", p.name, "rule.smk")
